--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                                     <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_15.jpg" class="left"></a>
                                     <a data-type="vimeo"
                                     data-size=""
-                                    data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-08&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://vimeo.com/508370244?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-08&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;08&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
-                                    href="https://vimeo.com/508370244"
+                                    data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-08&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://player.vimeo.com/video/508370244?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-08&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;08&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
+                                    href="https://player.vimeo.com/video/508370244"
                                     class="right">
                                 </a>
                         </div>
@@ -352,8 +352,8 @@
                                     <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_29.jpg" class="left"></a>
                                     <a data-type="vimeo"
                                     data-size=""
-                                    data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-15&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://vimeo.com/508370244?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-15&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;15&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
-                                    href="https://vimeo.com/508370244"
+                                    data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-15&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://player.vimeo.com/video/508370244?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-15&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;15&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
+                                    href="https://player.vimeo.com/video/508370244"
                                     class="right">
                                 </a>
                         </div>
@@ -797,8 +797,8 @@
                                     <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_89.jpg" class="left"></a>
                                     <a data-type="vimeo"
                                     data-size=""
-                                    data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-45&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://vimeo.com/571361096?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-45&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;45&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
-                                    href="https://vimeo.com/571361096"
+                                    data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-45&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://player.vimeo.com/video/571361096?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-45&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;45&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
+                                    href="https://player.vimeo.com/video/571361096"
                                     class="right">
                                 </a>
                         </div>
