--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="2332x1122" href="assets/img/media/portfolio_2021_single_11.jpg" class="left"></a>
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_12.jpg" class="right"></a>
+                                    <a data-type="img" data-size="2332x1122" href="assets/img/media/portfolio_2021_single_11.jpg" class="left wide"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_12.jpg" class="right narrow"></a>
                         </div>
                     </div>
                 </div>
@@ -231,8 +231,8 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="2697x1122" href="assets/img/media/portfolio_2021_single_17.jpg" class="left"></a>
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_18.jpg" class="right"></a>
+                                    <a data-type="img" data-size="2697x1122" href="assets/img/media/portfolio_2021_single_17.jpg" class="left wide"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_18.jpg" class="right narrow"></a>
                         </div>
                     </div>
                 </div>
@@ -291,9 +291,9 @@
                             srcset="assets/img/slides/fullsize/Portfolio_2021_12.jpg 3307w"
                         >
                         <div class="citem__loops">
-                            <video class="right" poster="assets/img/media/portfolio_2021_single_23_cover.jpg" muted loop >
-                                <source src="assets/img/media/portfolio_2021_single_23.mp4" type="video/mp4">
-                                <source src="assets/img/media/medium/portfolio_2021_single_23.mp4" type="video/mp4" media="all and (max-width: 1024px)">
+                            <video class="right" poster="assets/img/media/portfolio_2021_single_24_cover.jpg" muted loop >
+                                <source src="assets/img/media/portfolio_2021_single_24.mp4" type="video/mp4">
+                                <source src="assets/img/media/medium/portfolio_2021_single_24.mp4" type="video/mp4" media="all and (max-width: 1024px)">
                             </video>
                         </div>
                         <div class="citem__links">
@@ -303,7 +303,7 @@
                                         data-size=""
                                         data-loopvideo="<video class='cvidi' autoplay muted loop><source src='assets/img/media/portfolio_2021_single_24.mp4' type='video/mp4'></video>"
                                         href="assets/img/media/portfolio_2021_single_24.mp4"
-                                        class="right">
+                                        class="right wide">
                                     </a>
                         </div>
                     </div>
@@ -316,13 +316,19 @@
                         >
                         <div class="citem__loops">
                             <video class="right" poster="assets/img/media/portfolio_2021_single_26.mp4_cover.jpg" muted loop >
-                                <source src="assets/img/media/portfolio_2021_single_26.mp4" type="video/mp4">
-                                <source src="assets/img/media/medium/portfolio_2021_single_26.mp4" type="video/mp4" media="all and (max-width: 1024px)">
+                                <source src="assets/img/media/portfolio_2021_single_26.mp4.mp4" type="video/mp4">
+                                <source src="assets/img/media/medium/portfolio_2021_single_26.mp4.mp4" type="video/mp4" media="all and (max-width: 1024px)">
                             </video>
                         </div>
                         <div class="citem__links">
                                     <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_25.jpg" class="left"></a>
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_26.jpg" class="right"></a>
+                                    <a 
+                                        data-type="loop"
+                                        data-size="1080x1080"
+                                        data-loopvideo="<video class='cvidi' autoplay muted loop><source src='assets/img/media/portfolio_2021_single_26.mp4.mp4' type='video/mp4'></video>"
+                                        href="assets/img/media/portfolio_2021_single_26.mp4.mp4"
+                                        class="right">
+                                    </a>
                         </div>
                     </div>
                 </div>
@@ -349,12 +355,12 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_29.jpg" class="left"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_29.jpg" class="left narrow"></a>
                                     <a data-type="vimeo"
                                     data-size=""
                                     data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-15&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://player.vimeo.com/video/508370244?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-15&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;15&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
                                     href="https://player.vimeo.com/video/508370244"
-                                    class="right">
+                                    class="right wide">
                                 </a>
                         </div>
                     </div>
@@ -380,20 +386,20 @@
                             srcset="assets/img/slides/fullsize/Portfolio_2021_17.jpg 3307w"
                         >
                         <div class="citem__loops">
-                            <video class="left" poster="assets/img/media/portfolio_2021_single_33_cover.jpg" muted loop >
-                                <source src="assets/img/media/portfolio_2021_single_33.mp4" type="video/mp4">
-                                <source src="assets/img/media/medium/portfolio_2021_single_33.mp4" type="video/mp4" media="all and (max-width: 1024px)">
+                            <video class="left" poster="assets/img/media/portfolio_2021_single_33_cover.jpg.jpg" muted loop >
+                                <source src="assets/img/media/portfolio_2021_single_33.mp4.mp4" type="video/mp4">
+                                <source src="assets/img/media/medium/portfolio_2021_single_33.mp4.mp4" type="video/mp4" media="all and (max-width: 1024px)">
                             </video>
                         </div>
                         <div class="citem__links">
                                     <a 
                                         data-type="loop"
                                         data-size="1654x1122"
-                                        data-loopvideo="<video class='cvidi' autoplay muted loop><source src='assets/img/media/portfolio_2021_single_33.mp4' type='video/mp4'></video>"
-                                        href="assets/img/media/portfolio_2021_single_33.mp4"
-                                        class="left">
+                                        data-loopvideo="<video class='cvidi' autoplay muted loop><source src='assets/img/media/portfolio_2021_single_33.mp4.mp4' type='video/mp4'></video>"
+                                        href="assets/img/media/portfolio_2021_single_33.mp4.mp4"
+                                        class="left wide">
                                     </a>
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_34.jpg" class="right"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_34.jpg" class="right narrow"></a>
                         </div>
                     </div>
                 </div>
@@ -406,8 +412,8 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_35.jpg" class="left"></a>
-                                    <a data-type="img" data-size="2279x1122" href="assets/img/media/portfolio_2021_single_36.jpg" class="right"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_35.jpg" class="left narrow"></a>
+                                    <a data-type="img" data-size="2279x1122" href="assets/img/media/portfolio_2021_single_36.jpg" class="right wide"></a>
                         </div>
                     </div>
                 </div>
@@ -434,8 +440,8 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_39.jpg" class="left"></a>
-                                    <a data-type="img" data-size="2359x1122" href="assets/img/media/portfolio_2021_single_40.jpg" class="right"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_39.jpg" class="left narrow"></a>
+                                    <a data-type="img" data-size="2359x1122" href="assets/img/media/portfolio_2021_single_40.jpg" class="right wide"></a>
                         </div>
                     </div>
                 </div>
@@ -584,8 +590,8 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="2805x1122" href="assets/img/media/portfolio_2021_single_59.jpg" class="left"></a>
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_60.jpg" class="right"></a>
+                                    <a data-type="img" data-size="2805x1122" href="assets/img/media/portfolio_2021_single_59.jpg" class="left wide"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_60.jpg" class="right narrow"></a>
                         </div>
                     </div>
                 </div>
@@ -794,12 +800,12 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_89.jpg" class="left"></a>
+                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_89.jpg" class="left narrow"></a>
                                     <a data-type="vimeo"
                                     data-size=""
                                     data-vimeoembed="&lt;div id&#x3D;&quot;vimeoembed-pl-45&quot; class&#x3D;&quot;responsive-embed vimeoembed&quot; style&#x3D;&quot;padding-bottom:56.25%;&quot;&gt;&lt;iframe src&#x3D;&quot;https://player.vimeo.com/video/571361096?title&#x3D;0&amp;byline&#x3D;0&amp;portrait&#x3D;0&amp;muted&#x3D;1&amp;autopause&#x3D;0&amp;player_id&#x3D;pl-45&amp;app_id&#x3D;122963&quot; width&#x3D;&quot;640&quot; height&#x3D;&quot;360&quot; frameborder&#x3D;&quot;0&quot; allow&#x3D;&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen title&#x3D;&quot;45&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;"
                                     href="https://player.vimeo.com/video/571361096"
-                                    class="right">
+                                    class="right wide">
                                 </a>
                         </div>
                     </div>
