--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 <div class="citemwrap">
                     <div class="citem" data-pagenum="0">
                         <img 
-                            src="assets/img/slides/Portfolio_2021_00.png"
-                            srcset="assets/img/slides/fullsize/Portfolio_2021_00.png 3307w"
+                            src="assets/img/slides/Portfolio_2021_00_together.jpg"
+                            srcset="assets/img/slides/fullsize/Portfolio_2021_00_together.jpg 3307w"
                         >
                         <div class="citem__loops">
                         </div>
@@ -104,7 +104,6 @@
                         <div class="citem__loops">
                         </div>
                         <div class="citem__links">
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_01.jpg" class="left"></a>
                                     <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_02.jpg" class="right"></a>
                         </div>
                     </div>
@@ -315,7 +314,7 @@
                             srcset="assets/img/slides/fullsize/Portfolio_2021_13.jpg 3307w"
                         >
                         <div class="citem__loops">
-                            <video class="right" poster="assets/img/media/portfolio_2021_single_26.mp4_cover.jpg" muted loop >
+                            <video class="right hasmargin" poster="assets/img/media/portfolio_2021_single_26_cover.jpg" muted loop >
                                 <source src="assets/img/media/portfolio_2021_single_26.mp4.mp4" type="video/mp4">
                                 <source src="assets/img/media/medium/portfolio_2021_single_26.mp4.mp4" type="video/mp4" media="all and (max-width: 1024px)">
                             </video>
@@ -894,19 +893,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="citemwrap">
-                    <div class="citem" data-pagenum="52">
-                        <img 
-                            src="assets/img/slides/Portfolio_2021_52.png"
-                            srcset="assets/img/slides/fullsize/Portfolio_2021_52.png 3307w"
-                        >
-                        <div class="citem__loops">
-                        </div>
-                        <div class="citem__links">
-                                    <a data-type="img" data-size="1654x1122" href="assets/img/media/portfolio_2021_single_103.jpg" class="left"></a>
-                        </div>
-                    </div>
-                </div>
                 <!-- <div class="citemwrap">
                     <div class="citem">
                         <div>
@@ -925,7 +911,7 @@
         <div class="navcarousel">
             <div>
                 <figure>
-                    <img src="assets/img/slides/thumbs/Portfolio_2021_00.png">
+                    <img src="assets/img/slides/thumbs/Portfolio_2021_00_together.jpg">
                 </figure>
             </div>
             <div>
@@ -1181,11 +1167,6 @@
             <div>
                 <figure>
                     <img src="assets/img/slides/thumbs/Portfolio_2021_51.jpg">
-                </figure>
-            </div>
-            <div>
-                <figure>
-                    <img src="assets/img/slides/thumbs/Portfolio_2021_52.png">
                 </figure>
             </div>
             <!-- <div>
