--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="shrink cell">
                     <nav class="banner__nav">
                         <ul class="menu dropdown menu--main" data-dropdown-menu data-click-open="true" data-disable-hover="true">
-                            <li class="menu-item accent"><a target="_blank" href="assets/img/brick_portfolio_2021.pdf"><svg class="icon"><use xlink:href="#icon-dl"></use></svg> Download PDF version</a></li>
+                            <li class="menu-item accent"><a target="_blank" download href="assets/img/brick_portfolio_2021.pdf"><svg class="icon"><use xlink:href="#icon-dl"></use></svg> Download PDF version</a></li>
                         </ul>
                     </nav>
                 </div>
